--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-./node_modules/*
-./storage/*.key
-./idea*
+.node_modules/*
+.storage/*.key
+.idea/*
+.git/*
 .env
 .phpunit.result.cache
 Homestead.json
