--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "orchid/platform": "^5.1",
         "phpmailer/phpmailer": "^6.0",
         "predis/predis": "^1.1",
+        "propaganistas/laravel-phone": "^4.2",
         "torann/geoip": "^1.0"
     },
     "require-dev": {
