--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^7.1.3",
         "biscolab/laravel-recaptcha": "3.0",
         "fideloper/proxy": "^4.0",
+        "geoip2/geoip2": "^2.10",
         "guzzlehttp/guzzle": "^6.3",
+        "hundredminds/ipgeobase": "^1.03",
         "intervention/image": "^2.4",
         "jenssegers/date": "^3.4",
         "laravel/framework": "5.8.*",
