--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,12 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/yesterdayy/orchid"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "biscolab/laravel-recaptcha": "3.0",
@@ -16,11 +22,11 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7.1",
-        "orchid/platform": "^5.1",
         "phpmailer/phpmailer": "^6.0",
         "predis/predis": "^1.1",
         "propaganistas/laravel-phone": "^4.2",
-        "torann/geoip": "^1.0"
+        "torann/geoip": "^1.0",
+        "yesterdayy/orchid": "dev-master"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
